# learn_vhdl

./: .gitignore  .grammar_fail_counts  .grammar_fail_list  .grammar_focus_list  AGENTS.md  Cargo.toml  README.md  dev.sh  go.mod  go.sum  grammar_dev.md  journey.md  next.md  proposals.md  report.md  test.vhdl  test_godtier.vhdl  test_grammar.sh  view.sh
cmd/debug/: main.go
cmd/vhdl-facts/: main.go
cmd/vhdl-lint/: main.go
internal/config/: config.go  (+2 more)
policies/: aggregator.rego  basic.rego  cdc.rego  clocks_resets.rego  combinational.rego  configurations.rego  core.rego  fsm.rego  helpers.rego  hierarchy.rego  instances.rego  latch.rego  naming.rego  ports.rego  power.rego  processes.rego  quality.rego  rdc.rego  security.rego  sensitivity.rego  sequential.rego  signals.rego  style.rego  subprograms.rego  synthesis.rego  testbench.rego  types.rego
schema/: ir.cue
src/: main.rs
tmp/: marshal_demo.go  reflect_input.go
tools/: datalog_demo.py  fp_loop.py  timing_report.py  timing_trace.py
tree-sitter-vhdl/: Cargo.toml  grammar.js  grammar_old.js  package.json
tree-sitter-vhdl/bindings/go/: binding.go  binding_test.go
tree-sitter-vhdl/bindings/rust/: build.rs  lib.rs
tree-sitter-vhdl/queries/: extract.scm
tree-sitter-vhdl/src/: scanner.c
vhdl/: arch_func_test.vhdl  arch_test.vhdl  arch_test2.vhdl  attr_test.vhdl  body_test.vhdl  conc_test.vhdl  enum_test.vhdl  for_test.vhdl  func_decl_test.vhdl  func_test2.vhdl  generic_test.vhdl  pkg_body_simple.vhdl  proc_call_test2.vhdl  proc_call_test5.vhdl  process_all_test.vhdl  report_test.vhdl  while_test.vhdl
(+169 files in other folders)
