[package]
name = "vhdl-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.22"
tree-sitter-vhdl = { path = "./tree-sitter-vhdl" }
datafrog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
timely = "0.12"
differential-dataflow = "0.12"
regex = "1"

[build-dependencies]
cc = "1.0"
