[package]
name = "tree-sitter-vhdl"
version = "0.1.0"
edition = "2021"
build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"
tree-sitter = "0.22"

[build-dependencies]
cc = "1.0"
